syntax = "proto3";

package network;

option go_package = "grpc/gen";

message NodeHealthRequest {}

message NodeHealthResponse {
    bool healthy = 1;
    int64 timestamp = 2;
    string nodeType = 3;
    string networkId = 4;
}

service NodeService {
    rpc GetNodeHealth(network.NodeHealthRequest) returns (network.NodeHealthResponse) {}
}
